fixed projects carousel different height on mobile

--- a/src/containers/mainwindow/index.css
+++ b/src/containers/mainwindow/index.css
@@ -1,5 +1,5 @@
 .window-container {
-    position:relative;
+    margin:0;
 }
 
 .window {
